--- a/views/index.jade
+++ b/views/index.jade
@@ -6,7 +6,7 @@ html
     script(src='//code.jquery.com/jquery-1.11.0.min.js')
     script(src='/socket.io/socket.io.js')
     script(src='/js/index.js') 
-    title Super Awesome Chatroom
+    title ChatOsito
   body
     h1 Chat de Osito
     div
